--- a/TiKTok-JP.conf
+++ b/TiKTok-JP.conf
@@ -1,4 +1,8 @@
 #!name=TiKTok-JP
+#!desc=TikTok解锁
+#!system=ios
+
+#!name=TiKTok-JP
 [URL Rewrite]
 (?<=_region=)CN(?=&) JP 307
 (?<=&mcc_mnc=)4 2 307
