--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -5,7 +5,7 @@ bypass-tun = 0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 
 skip-proxy = localhost, *.local, captive.apple.com, 0.0.0.0/8, 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
 bypass-system = true
 ipv6 = true
-update-url = 
+update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow%20Rocket.conf
 
 [Proxy Group]
 🇨🇳TW = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾
