--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -9,7 +9,7 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 
 [Proxy Group]
 🇨🇳TW = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾
-🌿YY = url-test,🇭🇰香港 01 | 直连,🇭🇰香港 02 | 直连,🇭🇰香港 04 | 直连,🇭🇰香港 03 | 直连,🇸🇬新加坡 01 | 直连,🇸🇬新加坡 02 | 直连,🇯🇵日本 01 | 直连,🇯🇵日本 02 | 直连,🇺🇸美国 01 | 直连,🇺🇸美国 02 | 直连,interval=600,tolerance=100,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+🌿YY = url-test,一元机场,interval=600,tolerance=100,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 🌏PROXY = select,🇺🇸US,🇯🇵JP,🇸🇬SG,🇭🇰HK,🌿YY,interval=86400,timeout=5,select=4,url=http://www.gstatic.com/generate_204
 🇺🇸US = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=美国
 🇯🇵JP = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=日本
