--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -13,7 +13,7 @@ dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = false
-update-url = 
+update-url = https://github.com/kiwi707/Shadow-Rocket/blob/main/Shadow%20Rocket.conf
 
 [Proxy Group]
 🚀 策略选择 = select,🇨🇳 台湾节点,🇬🇧 英国节点,🇯🇵 日本节点,🇭🇰 香港节点,🇦🇺澳洲节点,🇸🇬 新加坡节点,🇺🇸 美国节点,🇰🇷 韩国节点,🇷🇺 俄罗斯节点,🇮🇳 印度,🇩🇪 德国,🇨🇦 加拿大,🚀 DIRECT,🔻 RMMD,policy-select-name=🔻 RMMD
