更新 Shadow Rocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -78,8 +78,8 @@ RULE-SET,https://whatshub.top/rule/ChinaMax.list,DIRECT
 RULE-SET,https://whatshub.top/rule/ChinaMaxNoIP.list,DIRECT
 RULE-SET,https://whatshub.top/rule/Riot.list,🎮 游戏平台
 RULE-SET,https://whatshub.top/rule/DouYin.list,💃 抖音
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Copilot/Copilot.list,🇺🇸 US
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,🇭🇰 HK
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Copilot/Copilot.list,🇺🇸 美国节点
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,🇭🇰 香港节点
 RULE-SET,https://whatshub.top/rule/AppStore.list, APP STORE
 RULE-SET,https://whatshub.top/rule/AppleID.list,🍏 APPLE ID
 RULE-SET,https://whatshub.top/rule/SystemOTA.list,🍎 APPLE UPDATE
@@ -87,7 +87,7 @@ RULE-SET,https://whatshub.top/rule/iCloud.list,☁️ ICLOUD
 RULE-SET,https://whatshub.top/rule/TikTok.list,🎶 TIKTOK
 RULE-SET,https://whatshub.top/rule/WeChat.list,💬 WECHAT
 RULE-SET,https://whatshub.top/rule/Instagram.list,👠 INSTAGRAM
-RULE-SET,https://whatshub.top/rule/GoogleVoice.list,🇺🇸 US
+RULE-SET,https://whatshub.top/rule/GoogleVoice.list,🇺🇸 美国节点
 RULE-SET,https://whatshub.top/rule/Speedtest.list,📈SPEEDTEST
 RULE-SET,https://whatshub.top/rule/WeTV.list,🇨🇳 台湾节点
 RULE-SET,https://whatshub.top/rule/Mail.list,📮 MAIL
@@ -99,7 +99,7 @@ RULE-SET,https://whatshub.top/rule/AppleProxy.list,🚀 策略选择
 RULE-SET,https://whatshub.top/rule/Telegram.list,📲 TELEGRAM
 RULE-SET,https://whatshub.top/rule/Weibo.list,🍟 新浪微博
 DOMAIN-KEYWORD,weibo,🍟 新浪微博
-RULE-SET,https://whatshub.top/rule/Twitter.list,🇺🇸 US
+RULE-SET,https://whatshub.top/rule/Twitter.list,🇺🇸 美国节点
 #RULE-SET,https://whatshub.top/rule/PlayStation.list,🎮 游戏平台
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Epic/Epic.list,🎮 游戏平台
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Sony/Sony.list,🎮 游戏平台
