--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -79,7 +79,7 @@ RULE-SET,https://whatshub.top/rule/ChinaMaxNoIP.list,DIRECT
 RULE-SET,https://whatshub.top/rule/Riot.list,🎮 游戏平台
 RULE-SET,https://whatshub.top/rule/DouYin.list,💃 抖音
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Copilot/Copilot.list,🇺🇸 美国节点
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,🇭🇰 香港节点
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 GitHub
 RULE-SET,https://whatshub.top/rule/AppStore.list, APP STORE
 RULE-SET,https://whatshub.top/rule/AppleID.list,🍏 APPLE ID
 RULE-SET,https://whatshub.top/rule/SystemOTA.list,🍎 APPLE UPDATE
