更新 Shadow Rocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -14,7 +14,12 @@ always-reject-url-rewrite = false
 private-ip-answer = false
 update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow%20Rocket.conf
 #include =
-
+# 代理分组类型：
+# select:手动切换节点。
+# url-test:自动切换延迟最低节点。
+# fallback:节点挂掉时自动切换其他可用节点。
+# load-balance:不同规则的请求使用分组里的不同节点进行连接。
+# random:随机使用分组里的不同节点进行连接。
 [Proxy Group]
 # 该配置策略组可实现特定规则走指定策略或节点；如想让netflix走新加坡节点 那么可以在相应代理分组里勾选新加坡节点；
 # 更改代理分组策略的步骤(以🎥 Netflix策略为例)：点击界面底部配置--点击配置文件"ⓘ"符号---代理分组---点击🎥 Netflix策略的"ⓘ"符号---勾选🇸🇬 新加坡节点--保存。(新版小火箭只需首页下拉即可调出代理分组界面）
@@ -49,6 +54,17 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 🚀 Direct = select,DIRECT,policy-select-name=DIRECT
 🚫 Reject = select,REJECT
 # 以下国家地区节点筛选 请自行根据机场节点名称修改正则
+# ----------
+# policy-regex-filter表示正则式或关键词筛选，常用写法：
+# 保留节点名称含有关键词A和B的节点:
+# (?=.*(A))^(?=.*(B))^.*$
+# 保留节点名称含有关键词A或B的节点:
+# A|B
+# 排除节点名称含有关键词A或B的节点:
+# ^((?!(A|B)).)*$
+# 保留节点名称含有关键词A并排除含有关键词B的节点:
+# (?=.*(A).)^((?!(B)).)*$
+# ----------
 ♻️ ALL = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 🔻 Rmmd = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=推荐
 🇭🇰 香港节点 = url-test,policy-select-name=【推荐】GPT*IEPL深港专线一_01,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
