--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -21,6 +21,7 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 # load-balance:不同规则的请求使用分组里的不同节点进行连接。
 # random:随机使用分组里的不同节点进行连接。
 [Proxy Group]
+#自用机场：https://is.gd/ImPmic
 # 该配置策略组可实现特定规则走指定策略或节点；如想让netflix走新加坡节点 那么可以在相应代理分组里勾选新加坡节点；
 # 更改代理分组策略的步骤(以🎥 Netflix策略为例)：点击界面底部配置--点击配置文件"ⓘ"符号---代理分组---点击🎥 Netflix策略的"ⓘ"符号---勾选🇸🇬 新加坡节点--保存。(新版小火箭只需首页下拉即可调出代理分组界面）
 # ♻️ ALL策略表示对所有节点进行测速并选择延迟最低的节点；测速间隔600秒，容差100ms；
