更新 Shadow Rocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -90,6 +90,7 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 
 
 [Rule]
+RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
 RULE-SET,https://whatshub.top/rule/ChinaMax.list,DIRECT
 RULE-SET,https://whatshub.top/rule/ChinaMaxNoIP.list,DIRECT
 RULE-SET,https://whatshub.top/rule/Riot.list,🎮 游戏平台
