--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -90,6 +90,9 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 
 
 [Rule]
+RULE-SET,https://whatshub.top/rule/Line.list,🇰🇷 韩国节点
+RULE-SET,https://whatshub.top/rule/Whatsapp.list,🇺🇸 美国节点
+RULE-SET,http://script.hub/file/_start_/https://raw.githubusercontent.com/RuCu6/QuanX/main/Rules/MyBlockAds.list/_end_/MyBlockAds.list?type=rule-set&target=shadowrocket-rule-set&del=true,🚫 REJECT
 RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
 RULE-SET,https://whatshub.top/rule/ChinaMax.list,DIRECT
 RULE-SET,https://whatshub.top/rule/ChinaMaxNoIP.list,DIRECT
