更新 ShadowRocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2024-09-03 22:08:35
+# Shadowrocket: 2024-09-10 22:09:03
 [General]
 include = sr_ad_only.conf
 bypass-system = true
@@ -20,34 +20,34 @@ update-url =
 🌎 Final = select,🚀 DIRECT,🇭🇰 HK,🇺🇸 US,🇨🇳 TW,🇯🇵 JP,🇰🇷 KR,🇸🇬 SG,🇹🇷 TR,policy-select-name=🇺🇸 US
 🍎 Apple Update = select,🚀 DIRECT,🚫 REJECT,policy-select-name=🚫 REJECT
 🍏 Apple服务 = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇫🇷 FR,🇹🇷 TR,🇸🇬 SG,policy-select-name=🚀 DIRECT
-🌐 Select = select,🇨🇳 TW,🇬🇧 UK,🇯🇵 JP,🇭🇰 HK,🇦🇺 AU,🇸🇬 SG,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🚀 DIRECT,🟢 IEPL,policy-select-name=🇨🇳 TW
-🔍 Google = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US
-📹 YouTube = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US,select=0
+🌐 Policy Select = select,🇨🇳 TW,🇬🇧 UK,🇯🇵 JP,🇭🇰 HK,🇦🇺 AU,🇸🇬 SG,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🚀 DIRECT,🟢 IEPL,policy-select-name=🇨🇳 TW
+🔍 Google = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US
+📹 YouTube = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US,select=0
 🎶 TikTok = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,policy-select-name=🇯🇵 JP
 🌸 Instagram = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,policy-select-name=🇯🇵 JP
-📲 Telegram = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,🟢 IEPL,policy-select-name=🇸🇬 SG
+📲 Telegram = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,🟢 IEPL,policy-select-name=🇺🇸 US
 📈SpeedTest = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🚀 DIRECT,policy-select-name=🇭🇰 HK
-🎥 Netflix = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US,select=0
+🎥 Netflix = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US,select=0
 🎵 Douyin = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇦🇺 AU,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🇫🇷 FR,policy-select-name=🚀 DIRECT
 ☁️ iCloud = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇸🇬 SG,🇯🇵 JP
 💬 WeChat = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,policy-select-name=🚀 DIRECT
 📮 Mail = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,policy-select-name=🇭🇰 HK
 💻 GitHub = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇫🇷 FR,🇹🇷 TR,🇬🇧 UK,🇸🇬 SG,🇦🇺 AU,🇮🇳 IN,🇩🇪 DE
-🎬 Disney+ = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🌐 SELECT
-🎻 Spotify = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,🇮🇳 IN,policy-select-name=🇮🇳 IN
-🎮 Game = select,🚀 DIRECT,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🚀 DIRECT
+🎬 Disney+ = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🌐 SELECT
+🎻 Spotify = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,🇮🇳 IN,policy-select-name=🇮🇳 IN
+🎮 Game = select,🚀 DIRECT,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🚀 DIRECT
 📽 BiliBili = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,policy-select-name=🚀 DIRECT
-🍿 GlobalMedia = select,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🌐 SELECT
+🍿 GlobalMedia = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🌐 SELECT
 🍔 DomesticMedia = select,🚀 DIRECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,policy-select-name=🚀 DIRECT
-🍟 Weibo = select,🚀 DIRECT,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🚀 DIRECT
-Ⓜ️ Microsoft = select,🚀 DIRECT,🌐 SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🚀 DIRECT
+🍟 Weibo = select,🚀 DIRECT,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🚀 DIRECT
+Ⓜ️ Microsoft = select,🚀 DIRECT,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🚀 DIRECT
 🚀 Direct = select,DIRECT,policy-select-name=DIRECT
 🚫 Reject = select,REJECT
 🟢 IEPL = fallback,policy-select-name=🇨🇳 ◎IEPL专线台北01ᴹᵁ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=IEPL
 🤖 ChatGPT = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=GPT
 🇭🇰 HK = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
 🇨🇳 TW = url-test,policy-select-name=🇨🇳 ◎台北专线01ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
-🇺🇸 US = fallback,policy-select-name=🇺🇸 ◎GPTCN2西雅图32ᴹᵁ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American|America))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|ᶜᶠ|韓國|獅城)).)*$
+🇺🇸 US = fallback,policy-select-name=🇺🇸 ◎GPTCN2西雅图ᵀᶻ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American|America))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|ᶜᶠ|韓國|獅城)).)*$
 🇯🇵 JP = url-test,policy-select-name=🇯🇵 ◎  日本 01  ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
 🇰🇷 KR = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
 🇫🇷 FR = url-test,policy-select-name=🇮🇪 ◎IEPL专线巴黎01ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=巴黎
@@ -88,10 +88,10 @@ RULE-SET,https://whatshub.top/rule/WeChat.list,💬 WECHAT
 RULE-SET,https://whatshub.top/rule/Instagram.list,🌸 INSTAGRAM
 RULE-SET,https://whatshub.top/rule/GoogleVoice.list,🇺🇸 US
 RULE-SET,https://whatshub.top/rule/Speedtest.list,📈SPEEDTEST
-RULE-SET,https://whatshub.top/rule/GoogleSearch.list,🔍 GOOGLE
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,🔍 GOOGLE
 RULE-SET,https://whatshub.top/rule/OpenAI.list,🤖 CHATGPT
-RULE-SET,https://whatshub.top/rule/AppleProxy.list,🌐 SELECT
-RULE-SET,https://whatshub.top/rule/Telegram.list,📲 TELEGRAM
+RULE-SET,https://whatshub.top/rule/AppleProxy.list,🌐 POLICY SELECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📲 TELEGRAM
 RULE-SET,https://whatshub.top/rule/Weibo.list,🍟 WEIBO
 DOMAIN-KEYWORD,weibo,🍟 WEIBO
 RULE-SET,https://whatshub.top/rule/Twitter.list,🇺🇸 US
@@ -104,8 +104,8 @@ DOMAIN-SUFFIX,api.bilibili.com,📽 BILIBILI
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,📽 BILIBILI
 RULE-SET,https://whatshub.top/rule/ChinaMedia.list,🍔 DOMESTICMEDIA
 RULE-SET,https://whatshub.top/rule/ProxyMedia.list,🍿 GLOBALMEDIA
-RULE-SET,https://whatshub.top/rule/Proxy.list,🌐 SELECT
-DOMAIN-SET,https://whatshub.top/rule/Proxy.list,🌐 SELECT
+#RULE-SET,https://whatshub.top/rule/Proxy.list,🌐 SELECT
+#DOMAIN-SET,https://whatshub.top/rule/Proxy.list,🌐 SELECT
 RULE-SET,https://whatshub.top/rule/IPs-CN.list,🚀 DIRECT
 RULE-SET,https://whatshub.top/rule/ASN-CN.list,🚀 DIRECT
 # 本地局域网地址的规则集。
