更新 Shadow Rocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -74,7 +74,7 @@ RULE-SET,https://whatshub.top/rule/WeTV.list,🇨🇳 TW
 RULE-SET,https://whatshub.top/rule/Line.list,🇰🇷 KR
 RULE-SET,https://whatshub.top/rule/Whatsapp.list,🇺🇸 US
 RULE-SET,http://script.hub/file/_start_/https://raw.githubusercontent.com/RuCu6/QuanX/main/Rules/MyBlockAds.list/_end_/MyBlockAds.list?type=rule-set&target=shadowrocket-rule-set&del=true,🚫 REJECT
-RULE-SET,https://whatshub.top/rule/AntiAD.list,🚫 REJECT
+#RULE-SET,https://whatshub.top/rule/AntiAD.list,🚫 REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Copilot/Copilot.list,🇺🇸 US
 RULE-SET,https://whatshub.top/rule/ChinaMax.list,🚀 DIRECT
 RULE-SET,https://whatshub.top/rule/ChinaMaxNoIP.list,🚀 DIRECT
