更新 TiKTok-KR.conf

--- a/TiKTok-KR.conf
+++ b/TiKTok-KR.conf
@@ -1,11 +1,17 @@
-#!name=TiKTok-KR
-#!desc=TikTok 解锁
-#!system=ios
-[URL Rewrite]
-(?<=_region=)CN(?=&) KR 307
-(?<=&mcc_mnc=)4 2 307
-^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
-(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
 
-[MITM]
-hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
+# Temu DOMAIN-SUFFIX 规则
+DOMAIN-SUFFIX,temu.com
+DOMAIN-SUFFIX,cdn.temu.com
+DOMAIN-SUFFIX,api.temu.com
+DOMAIN-SUFFIX,img.temu.com
+DOMAIN-SUFFIX,static.temu.com
+DOMAIN-SUFFIX,www.temu.com
+DOMAIN-SUFFIX,shop.temu.com
+DOMAIN-SUFFIX,pay.temu.com
+DOMAIN-SUFFIX,support.temu.com
+DOMAIN-SUFFIX,feedback.temu.com
+DOMAIN-SUFFIX,tracking.temu.com
+DOMAIN-SUFFIX,orders.temu.com
+DOMAIN-SUFFIX,ads.temu.com
+DOMAIN-SUFFIX,email.temu.com
+DOMAIN-SUFFIX,login.temu.com
