--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -13,7 +13,7 @@ dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = false
-update-url = 
+update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow%20Rocket.conf
 
 [Proxy Group]
 🔞 PornHub = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇫🇷 FR,🇹🇷 TR,🇬🇧 UK,🇸🇬 SG,🇦🇺 AU,policy-select-name=🇯🇵 JP
