--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2024-09-16 22:09:03
+# Shadowrocket: 2024-09-16 22:09:03 99889
 [General]
 include = sr_ad_only.conf
 bypass-system = true
