更新 Shadow Rocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -62,6 +62,7 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 🌿 KB = url-test,policy-select-name=🇺🇸 ◎IEPL专线美国奈飞01ᵀᶻ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(US 0[1-9]|US|美国))
 
 [Rule]
+RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Temu.list,🌐 POLICY SELECT
 RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Talkatone.list,🇺🇸 US
 RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/PornHub.list,🔞 PORNHUB
 DOMAIN-SUFFIX,zh.stripchat.com,🇯🇵 JP
