--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -16,7 +16,7 @@ private-ip-answer = false
 update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow%20Rocket.conf
 
 [Proxy Group]
-#669555999
+🛍️ Temu = select,🇺🇸 US,🇭🇰 HK,🇨🇳 TW,🇯🇵 JP,🇰🇷 KR,🇸🇬 SG,policy-select-name=🇺🇸 US
 🔞 PornHub = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇫🇷 FR,🇹🇷 TR,🇬🇧 UK,🇸🇬 SG,🇦🇺 AU,policy-select-name=🇯🇵 JP
 🌎 Final = select,🚀 DIRECT,🇭🇰 HK,🇺🇸 US,🇨🇳 TW,🇯🇵 JP,🇰🇷 KR,🇸🇬 SG,🇹🇷 TR,policy-select-name=🇺🇸 US
 🍎 Apple Update = select,🚀 DIRECT,🚫 REJECT,policy-select-name=🚫 REJECT
@@ -62,7 +62,7 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 🌿 KB = url-test,policy-select-name=🇺🇸 ◎IEPL专线美国奈飞01ᵀᶻ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(US 0[1-9]|US|美国))
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Temu.list,🌐 POLICY SELECT
+RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Temu.list,🛍️ TEMU
 RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Talkatone.list,🇺🇸 US
 RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/PornHub.list,🔞 PORNHUB
 DOMAIN-SUFFIX,zh.stripchat.com,🇯🇵 JP
