--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -1,18 +1,23 @@
 # Shadowrocket: 2024-09-16 22:09:03 99889
 [General]
-include = sr_ad_only.conf
 bypass-system = true
-skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,captive.apple.com,*.ccb.com,*.abchina.com.cn,*.psbc.com,www.baidu.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = 119.29.29.29,114.114.114.114,223.5.5.5,system
+dns-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,223.5.5.5,119.29.29.29
 fallback-dns-server = system
-ipv6 = false
+ipv6 = true
 prefer-ipv6 = false
-dns-fallback-system = false
 dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
-private-ip-answer = false
+private-ip-answer = true
+dns-direct-fallback-proxy = false
+tun-included-routes = 
+always-real-ip = 
+hijack-dns = 8.8.8.8:53,8.8.4.4:53
+udp-policy-not-supported-behaviour = REJECT
+stun-response-ip = 
+stun-response-ipv6 = 
 update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow%20Rocket.conf
 
 [Proxy Group]
@@ -113,6 +118,11 @@ RULE-SET,https://whatshub.top/rule/ASN-CN.list,🚀 DIRECT
 # 本地局域网地址的规则集。
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,🚀 DIRECT
 FINAL,🌎 FINAL
+[Host]
+# ----------
+*.apple.com = server:system
+*.icloud.com = server:system
+localhost = 127.0.0.1
 
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com 302
