--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -125,7 +125,15 @@ FINAL,🌎 FINAL
 localhost = 127.0.0.1
 
 [URL Rewrite]
+
+# ======= Google搜索重写 ======= #
+
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
+
+# ======= 油管视频广告请求 ======= #
+
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
 
 [MITM]
