更新 Shadow Rocket.conf

--- a/Shadow Rocket.conf
+++ b/Shadow Rocket.conf
@@ -1,5 +1,6 @@
-# Shadowrocket: 2024-09-16 22:09:03 99889
+# Shadowrocket: 2024-10-22 09:31:34
 [General]
+include = sr_ad_only.conf
 bypass-system = true
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,captive.apple.com,*.ccb.com,*.abchina.com.cn,*.psbc.com,www.baidu.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
@@ -21,6 +22,7 @@ stun-response-ipv6 =
 update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow%20Rocket.conf
 
 [Proxy Group]
+🚦MT = select,🇭🇰HONGKONG,🇸🇬SINGAPORE,🇨🇳TAIWAN,🇯🇵JAPAN,policy-select-name=🇸🇬SINGAPORE
 🛍️ Temu = select,🇺🇸 US,🇭🇰 HK,🇨🇳 TW,🇯🇵 JP,🇰🇷 KR,🇸🇬 SG,policy-select-name=🇺🇸 US
 🔞 PornHub = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇫🇷 FR,🇹🇷 TR,🇬🇧 UK,🇸🇬 SG,🇦🇺 AU,policy-select-name=🇯🇵 JP
 🌎 Final = select,🚀 DIRECT,🇭🇰 HK,🇺🇸 US,🇨🇳 TW,🇯🇵 JP,🇰🇷 KR,🇸🇬 SG,🇹🇷 TR,policy-select-name=🇺🇸 US
@@ -28,11 +30,11 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 🍏 Apple服务 = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇫🇷 FR,🇹🇷 TR,🇸🇬 SG,policy-select-name=🚀 DIRECT
 🌐 Policy Select = select,🇨🇳 TW,🇬🇧 UK,🇯🇵 JP,🇭🇰 HK,🇦🇺 AU,🇸🇬 SG,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🚀 DIRECT,🟢 IEPL,policy-select-name=🇨🇳 TW
 🔍 Google = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US
-📹 YouTube = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US,select=0
+📹 YouTube = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇭🇰 HK,select=0
 🎶 TikTok = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,policy-select-name=🇯🇵 JP
 🌸 Instagram = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,policy-select-name=🇯🇵 JP
-📲 Telegram = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,🟢 IEPL,policy-select-name=🇺🇸 US
-📈SpeedTest = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🚀 DIRECT,policy-select-name=🇭🇰 HK
+📲 Telegram = select,🇸🇬 SG,🇭🇰 HK,🇨🇳 TW,🇯🇵 JP,🇺🇸 US,🇰🇷 KR,🌐 POLICY SELECT,🇬🇧 UK,🟢 IEPL,🚦MT,policy-select-name=🇭🇰 HK
+📈SpeedTest = select,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇯🇵 JP,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🚀 DIRECT,🇨🇳 ➣ TW-1ᴹᵀ,🇯🇵 ➣ JP-5ᴹᵀ,🇺🇸 ➣ US-1ᴹᵀ,🇯🇵 ➣ JP-3ᴹᵀ,🇸🇬 ➣ SG-1ᴹᵀ,policy-select-name=🇸🇬 ➣ SG-1ᴹᵀ
 🎥 Netflix = select,🌐 POLICY SELECT,🇭🇰 HK,🇺🇸 US,🇸🇬 SG,🇯🇵 JP,🇨🇳 TW,🇬🇧 UK,🇰🇷 KR,policy-select-name=🇺🇸 US,select=0
 🎵 Douyin = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇯🇵 JP,🇰🇷 KR,🇹🇷 TR,🇬🇧 UK,🇦🇺 AU,🇸🇬 SG,🇮🇳 IN,🇩🇪 DE,🇨🇦 CA,🇫🇷 FR,policy-select-name=🚀 DIRECT
 ☁️ iCloud = select,🚀 DIRECT,🇭🇰 HK,🇨🇳 TW,🇺🇸 US,🇰🇷 KR,🇸🇬 SG,🇯🇵 JP
@@ -50,25 +52,33 @@ update-url = https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Shadow
 🚀 Direct = select,DIRECT,policy-select-name=DIRECT
 🚫 Reject = select,REJECT
 🟢 IEPL = fallback,policy-select-name=🇨🇳 ◎IEPL专线台北01ᴹᵁ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=IEPL
-🤖 ChatGPT = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=GPT
-🇭🇰 HK = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
-🇨🇳 TW = url-test,policy-select-name=🇨🇳 ◎台北专线01ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
-🇺🇸 US = fallback,policy-select-name=🇺🇸 ◎GPTCN2西雅图ᵀᶻ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American|America))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|ᶜᶠ|韓國|獅城)).)*$
+🤖 ChatGPT = fallback,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=GPT
+🇭🇰 HK = fallback,policy-select-name=➥🇭🇰HK-2ᵐᵗ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
+🇨🇳 TW = fallback,policy-select-name=➥🇨🇳TW-2ᵐᵗ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
+🇺🇸 US = fallback,policy-select-name=➥🇺🇸US-4ᵐᵗ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American|America))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|ᶜᶠ|韓國|獅城)).)*$
 🇯🇵 JP = url-test,policy-select-name=🇯🇵 ◎  日本 01  ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
 🇰🇷 KR = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
-🇫🇷 FR = url-test,policy-select-name=🇮🇪 ◎IEPL专线巴黎01ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=巴黎
-🇹🇷 TR = url-test,policy-select-name=🇮🇪 ◎IEPL专线土耳其01ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什|土耳其
+🇫🇷 FR = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=巴黎|FR
+🇹🇷 TR = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|TR|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什|土耳其
 🇬🇧 UK = url-test,policy-select-name=🇬🇧 ◎ GB LONDON0112ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰|London
-🇸🇬 SG = url-test,policy-select-name=🇸🇬 ◎新加坡专线01ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
-🇦🇺 AU = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=澳大利亚
+🇸🇬 SG = fallback,policy-select-name=➥🇸🇬SGᵐᵗ,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
+🇦🇺 AU = url-test,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=澳大利亚|AU
 🇮🇳 IN = url-test,policy-select-name=🇮🇳 ◎ IN MUMBAI0114ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=🇮🇳|印度|IN|IND|孟买|新德里|高知|Republic of India|India
 🇩🇪 DE = url-test,policy-select-name=🇩🇪 ◎ DE FRANKFURT0ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=🇩🇪|德国|DEU|DE|柏林|慕尼黑|汉堡|科隆|Germany
 🇨🇦 CA = url-test,policy-select-name=🇨🇦 ◎ CA MONTREAL0ᴹᵁ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=🇨🇦|加拿大|CA|渥太华
 🌿 KB = url-test,policy-select-name=🇺🇸 ◎IEPL专线美国奈飞01ᵀᶻ,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(US 0[1-9]|US|美国))
+#======= =======
+🇯🇵Japan = url-test,MT,use=true,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=JP
+🇨🇳Taiwan = select,MT,use=true,policy-regex-filter=TW
+🇸🇬Singapore = select,MT,use=true,policy-regex-filter=SG
+🇭🇰HONGKONG = url-test,MT,use=true,interval=600,tolerance=100,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=HK
 
 [Rule]
+DOMAIN-SUFFIX,ping0.cc,PROXY
+DOMAIN-SUFFIX,is.gd,🇺🇸 US
+RULE-SET,https://whatshub.top/rule/OpenAI.list,🤖 CHATGPT
 RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Temu.list,🛍️ TEMU
-RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Talkatone.list,🇺🇸 US
+#RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/Talkatone.list,🇺🇸 US
 RULE-SET,https://raw.githubusercontent.com/kiwi707/Shadow-Rocket/main/PornHub.list,🔞 PORNHUB
 DOMAIN-SUFFIX,zh.stripchat.com,🇯🇵 JP
 DOMAIN-SUFFIX,vless.trevely.us.kg,🌿 KB
@@ -81,7 +91,7 @@ RULE-SET,https://whatshub.top/rule/WeTV.list,🇨🇳 TW
 RULE-SET,https://whatshub.top/rule/Line.list,🇰🇷 KR
 RULE-SET,https://whatshub.top/rule/Whatsapp.list,🇺🇸 US
 RULE-SET,http://script.hub/file/_start_/https://raw.githubusercontent.com/RuCu6/QuanX/main/Rules/MyBlockAds.list/_end_/MyBlockAds.list?type=rule-set&target=shadowrocket-rule-set&del=true,🚫 REJECT
-#RULE-SET,https://whatshub.top/rule/AntiAD.list,🚫 REJECT
+RULE-SET,https://whatshub.top/rule/AntiAD.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Copilot/Copilot.list,🇺🇸 US
 RULE-SET,https://whatshub.top/rule/ChinaMax.list,🚀 DIRECT
 RULE-SET,https://whatshub.top/rule/ChinaMaxNoIP.list,🚀 DIRECT
@@ -96,7 +106,6 @@ RULE-SET,https://whatshub.top/rule/Instagram.list,🌸 INSTAGRAM
 RULE-SET,https://whatshub.top/rule/GoogleVoice.list,🇺🇸 US
 RULE-SET,https://whatshub.top/rule/Speedtest.list,📈SPEEDTEST
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,🔍 GOOGLE
-RULE-SET,https://whatshub.top/rule/OpenAI.list,🤖 CHATGPT
 RULE-SET,https://whatshub.top/rule/AppleProxy.list,🌐 POLICY SELECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📲 TELEGRAM
 RULE-SET,https://whatshub.top/rule/Weibo.list,🍟 WEIBO
@@ -118,22 +127,21 @@ RULE-SET,https://whatshub.top/rule/ASN-CN.list,🚀 DIRECT
 # 本地局域网地址的规则集。
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,🚀 DIRECT
 FINAL,🌎 FINAL
+
 [Host]
-# ----------
 *.apple.com = server:system
 *.icloud.com = server:system
 localhost = 127.0.0.1
 
 [URL Rewrite]
-
 # ======= Google搜索重写 ======= #
-
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
-
 # ======= 油管视频广告请求 ======= #
-
 (^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302
 ^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
 
-[MITM]
+[Script]
+#chatgpt-unlock = script-path=https://raw.githubusercontent.com/MCdasheng/Loon/main/Streaming/ChatGPT.js, tag=ChatGPT 解锁, img-url=https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/ChatGPT/ChatGPT4.png, enabled=true, ipinfo_token=token
+瞬连vpn = type=http-request,pattern=https://sl.eric.vpn/web/sub,requires-body=1,max-size=0,binary-body-mode=0,script-path=https://raw.githubusercontent.com/Alex0510/Eric/refs/heads/master/surge/Script/SLVPN.js,script-update-interval=0
+
