--- a/TiKTok-TW.conf
+++ b/TiKTok-TW.conf
@@ -1,11 +1,30 @@
-#!name=TiKTok-TW
-#!desc=TikTok 解锁
-#!system=ios
-[URL Rewrite]
-(?<=_region=)CN(?=&) TW 307
-(?<=&mcc_mnc=)4 2 307
-^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
-(^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
+# Windows App Mobile 分流规则
+DOMAIN-SUFFIX,azure.com
+DOMAIN-SUFFIX,azureedge.net
+DOMAIN-SUFFIX,azurewebsites.net
+DOMAIN-SUFFIX,msidentity.com
+DOMAIN-SUFFIX,windows.net
+DOMAIN-SUFFIX,microsoft.com
+DOMAIN-SUFFIX,msftcdn.com
+DOMAIN-SUFFIX,msftconnecttest.com
+DOMAIN-SUFFIX,login.microsoftonline.com
+DOMAIN-SUFFIX,login.live.com
+DOMAIN-SUFFIX,aadcdn.msftauth.net
+DOMAIN-SUFFIX,rdgateway.microsoft.com
+DOMAIN-SUFFIX,wvd.microsoft.com
+DOMAIN-SUFFIX,rdweb.wvd.microsoft.com
+DOMAIN-SUFFIX,remoteapp.windowsazure.com
+DOMAIN-SUFFIX,portal.azure.com
+DOMAIN-SUFFIX,management.azure.com
 
-[MITM]
-hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
+# 关键字匹配
+DOMAIN-KEYWORD,rdgateway
+DOMAIN-KEYWORD,rdweb
+DOMAIN-KEYWORD,remoteapp
+DOMAIN-KEYWORD,windows
+
+# IP范围（可选，适配特定场景）
+IP-CIDR,20.190.128.0/18,no-resolve
+IP-CIDR,40.74.0.0/16,no-resolve
+IP-CIDR,104.40.0.0/13,no-resolve
+IP-CIDR,13.64.0.0/11,no-resolve
